--- a/index.html
+++ b/index.html
@@ -3,48 +3,172 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Typing Test App</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/js extension/javascript.js" defer></script>
+  <title>TypeRacer</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/css/style-bootstrap.css">
 </head>
 <body>
-</body>
-  <main>
-    <section id="instructions" class="instructions">
-      <h1>Welcome to the Typing Test!</h1>
-      <ul>
-        <li>Read the instructions carefully before starting.</li>
-        <li>Click "Start Test" to begin.</li>
-        <li>Type the displayed text as quickly and accurately as possible.</li>
-        <li>Your speed (WPM) and accuracy will be shown after the test.</li>
-      </ul>
-    </section>
-    <div class="difficulty-select">
-      <label for="difficulty">Difficulty:</label>
-      <select id="difficulty">
-        <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-      </select>
+  <!-- Header -->
+  <header class="bg-primary text-white p-3">
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center">
+        <h1 class="h3 mb-0" style="font-family: 'Alegreya', serif;">TypeRacer</h1>
+        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#instructionsModal">
+          <i class="fas fa-info-circle"></i> Instructions
+        </button>
+      </div>
     </div>
-    <button id="startTestBtn" class="start-btn">Start Test</button>
-    <section id="typingTest" class="typing-test" style="display:none;">
-      <div id="bestScore" class="best-score" style="display:none;"></div>
-      <div id="testText" class="test-text"></div>
-      <div id="feedback" class="feedback"></div>
-      <input type="text" id="typingInput" class="typing-input" placeholder="Start typing here..." autocomplete="off" disabled aria-label="Typing input">
-      <div id="spellingHint" class="spelling-hint" aria-live="polite" style="display:none;">
-        <em>UK English tip:</em> <strong>practice</strong> is the noun, <strong>practise</strong> is the verb. Many people use "practice" for both in informal writing.
+  </header>
+
+  <!-- Instructions Modal -->
+  <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="instructionsModalLabel">How to Take the Test</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <ul>
+            <li>Select your difficulty level from the dropdown menu.</li>
+            <li>Click "Start Test" to begin.</li>
+            <li>Type the displayed text as quickly and accurately as possible.</li>
+            <li>Your speed (WPM) and accuracy will be shown after the test.</li>
+            <li>Track your progress with session statistics and best scores.</li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Got it!</button>
+        </div>
       </div>
-      <div class="test-info">
-        <span id="timer">Time: 0s</span>
-        <span id="wpm">WPM: --</span>
-        <span id="accuracy">Accuracy: --</span>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <main class="container mt-4">
+    <div class="row g-4">
+      <!-- Test Area (Left Column - 2/3 width on medium+ screens) -->
+      <div class="col-12 col-md-8">
+        <div class="card shadow">
+          <div class="card-body">
+            <!-- Difficulty Selector -->
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="difficulty">Select Difficulty</label>
+              <select class="form-select" id="difficulty">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+              </select>
+            </div>
+
+            <!-- Sample Text Display -->
+            <div id="testText" class="p-3 mb-3 border rounded bg-light" style="font-family: 'Nunito', sans-serif; font-size: 1.1rem; line-height: 1.8;">
+            </div>
+
+            <!-- Typing Feedback -->
+            <div id="feedback" class="p-3 mb-3 border rounded" style="font-family: 'Nunito', sans-serif; font-size: 1.1rem; line-height: 1.8; min-height: 60px;">
+            </div>
+
+            <!-- Typing Input -->
+            <div class="mb-3">
+              <input type="text" id="typingInput" class="form-control form-control-lg" 
+                     placeholder="Click Start Test, then type here..." 
+                     autocomplete="off"
+                     aria-label="Typing input"
+                     style="font-family: 'Nunito', sans-serif;">
+            </div>
+
+            <!-- Educational Hint -->
+            <div id="spellingHint" class="alert alert-info" role="alert" aria-live="polite" style="display:none;">
+              <i class="fas fa-lightbulb"></i>
+              <em>UK English tip:</em> <strong>practice</strong> is the noun, <strong>practise</strong> is the verb.
+            </div>
+
+            <!-- Action Buttons -->
+            <div class="d-flex gap-2 justify-content-center">
+              <button id="startTestBtn" class="btn btn-success btn-lg">
+                <i class="fas fa-play"></i> Start Test
+              </button>
+              <button id="stopTestBtn" class="btn btn-warning btn-lg" disabled>
+                <i class="fas fa-stop"></i> Stop Test
+              </button>
+              <button id="retryBtn" class="btn btn-outline-warning btn-lg">
+                <i class="fas fa-redo"></i> Retry
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div id="results" class="results" style="display:none;"></div>
-      <button id="retryBtn" class="retry-btn" style="display:none;">Retry</button>
-    </section>
+
+      <!-- Results Area (Right Column - 1/3 width on medium+ screens) -->
+      <div class="col-12 col-md-4">
+        <!-- Current Results -->
+        <div class="card shadow mb-3">
+          <div class="card-header" style="background-color: #ff8400; color: white;">
+            <h5 class="card-title mb-0">
+              <i class="fas fa-chart-line"></i> Current Results
+            </h5>
+          </div>
+          <div class="card-body">
+            <div class="row text-center">
+              <div class="col-12 mb-2">
+                <span class="text-muted">Level:</span>
+                <span id="currentLevel" class="fw-bold">-</span>
+              </div>
+              <div class="col-12 mb-2">
+                <span class="text-muted">Time:</span>
+                <span id="timer" class="fw-bold">0s</span>
+              </div>
+              <div class="col-12 mb-2">
+                <span class="text-muted">WPM:</span>
+                <span id="wpm" class="fw-bold text-primary">--</span>
+              </div>
+              <div class="col-12">
+                <span class="text-muted">Accuracy:</span>
+                <span id="accuracy" class="fw-bold text-success">--</span>
+              </div>
+            </div>
+            <div id="results" class="mt-3" style="display:none;"></div>
+          </div>
+        </div>
+
+        <!-- Best Score -->
+        <div id="bestScore" class="card shadow mb-3" style="display:none;">
+          <div class="card-header bg-success text-white">
+            <h6 class="card-title mb-0">
+              <i class="fas fa-trophy"></i> Personal Best
+            </h6>
+          </div>
+          <div class="card-body text-center">
+            <span class="h4 text-success" id="bestScoreValue">-- WPM</span>
+          </div>
+        </div>
+
+        <!-- Session Statistics -->
+        <div id="sessionStats" class="card shadow" style="display:none;">
+          <div class="card-header bg-info text-white">
+            <h6 class="card-title mb-0">
+              <i class="fas fa-chart-bar"></i> Session Stats
+            </h6>
+          </div>
+          <div class="card-body" id="sessionStatsContent">
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
-</body>
+
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+  <!-- FontAwesome -->
+  <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
+  <!-- Custom JavaScript -->
+  <script src="assets/js extension/javascript.js" defer></script>
 </body>
 </html>
