--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-<!DOCT  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self';">"PE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Security Headers -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self';">
-  <meta http-equiv="X-Frame-Options" content="DENY">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-  <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), geolocation=()">
-  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <!-- Content Security Policy - Only CSP can be set via meta tag -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://cdn.jsdelivr.net; object-src 'none'; base-uri 'self'; form-action 'self';">
   <title>TypeRacer - Improve Your Typing Speed and Accuracy</title>
   <!-- Preload critical resources -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" as="style">
@@ -28,7 +23,7 @@
   <header class="bg-primary text-white p-3">
     <div class="container">
       <div class="d-flex justify-content-between align-items-center">
-        <h1 class="h3 mb-0" style="font-family: 'Alegreya', serif;">TypeRacer</h1>
+        <h1 class="mb-0 header-title">TypeRacer</h1>
         <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#instructionsModal">
           📋 Instructions
         </button>
@@ -77,13 +72,23 @@
               </select>
             </div>
 
+            <!-- Anti-Cheat Options -->
+            <div class="mb-3">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="antiCheatMode">
+                <label class="form-check-label" for="antiCheatMode">
+                  🛡️ Enable Anti-Cheat (prevents copy/paste)
+                </label>
+                <div class="form-text">Enable this option for fair typing practice, or leave disabled for accessibility</div>
+              </div>
+            </div>
+
             <!-- Sample Text Display -->
-            <div id="testText" class="p-3 mb-3 border rounded bg-light" style="font-family: 'Nunito', sans-serif; font-size: 1.1rem; line-height: 1.8;">
+            <div id="testText" class="p-3 mb-3 border rounded bg-light test-text-display">
             </div>
 
             <!-- Typing Feedback -->
-            <div id="feedback" class="p-3 mb-3 border rounded" 
-                 style="font-family: 'Nunito', sans-serif; font-size: 1.1rem; line-height: 1.8; min-height: 60px;"
+            <div id="feedback" class="p-3 mb-3 border rounded feedback-display" 
                  aria-live="polite" 
                  aria-label="Real-time typing feedback"
                  role="status">
@@ -92,18 +97,16 @@
             <!-- Typing Input -->
             <div class="mb-3">
               <label for="typingInput" class="sr-only">Type the displayed text here</label>
-              <input type="text" id="typingInput" class="form-control form-control-lg" 
+              <input type="text" id="typingInput" class="form-control form-control-lg typing-input" 
                      placeholder="Click Start Test, then type here..." 
                      autocomplete="off"
                      aria-label="Typing input field for the typing test"
                      aria-describedby="testText feedback"
-                     role="textbox"
-                     aria-required="false"
-                     style="font-family: 'Nunito', sans-serif;">
+                     role="textbox">
             </div>
 
             <!-- Educational Hint -->
-            <div id="spellingHint" class="alert alert-info" role="alert" aria-live="polite" style="display:none;">
+            <div id="spellingHint" class="alert alert-info spelling-hint" role="alert" aria-live="polite">
               💡 <em>UK English tip:</em> <strong>practice</strong> is the noun, <strong>practise</strong> is the verb.
             </div>
 
@@ -132,10 +135,10 @@
       <div class="col-12 col-md-4">
         <!-- Current Results -->
         <div class="card shadow mb-3">
-          <div class="card-header" style="background-color: #ff8400; color: white;">
-            <h3 class="card-title mb-0">
+          <div class="card-header current-results-header">
+            <h2 class="card-title mb-0">
               📊 Current Results
-            </h3>
+            </h2>
           </div>
           <div class="card-body">
             <div class="row text-center">
@@ -156,16 +159,16 @@
                 <span id="accuracy" class="fw-bold text-success">--</span>
               </div>
             </div>
-            <div id="results" class="mt-3" style="display:none;"></div>
+            <div id="results" class="mt-3 results-display"></div>
           </div>
         </div>
 
         <!-- Best Score -->
-        <div id="bestScore" class="card shadow mb-3" style="display:none;">
+        <div id="bestScore" class="card shadow mb-3 best-score-card">
           <div class="card-header bg-success text-white">
-            <h4 class="card-title mb-0">
+            <h2 class="card-title mb-0">
               🏆 Personal Best
-            </h4>
+            </h2>
           </div>
           <div class="card-body text-center">
             <span class="h4 text-success" id="bestScoreValue">-- WPM</span>
@@ -173,11 +176,11 @@
         </div>
 
         <!-- Session Statistics -->
-        <div id="sessionStats" class="card shadow" style="display:none;">
+        <div id="sessionStats" class="card shadow session-stats-card">
           <div class="card-header bg-info text-white">
-            <h5 class="card-title mb-0">
+            <h2 class="card-title mb-0">
               📈 Session Stats
-            </h5>
+            </h2>
           </div>
           <div class="card-body" id="sessionStatsContent">
           </div>
