🔧 UI/UX: Improve text readability and fix retry button visibility
✅ Enhanced typing text display:
- Increased font size to 1.8rem for better readability
- Applied softer gray color (#4a5568) to reduce eye strain
- Updated both test text display and hover states

✅ Fixed retry button issue:
- Made retry button visible by default
- Users can now retry tests immediately
- Improved overall UI accessibility

🎯 Focus: Better user experience with larger, easier-to-read text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <!-- Sample Text Display -->
-            <div id="testText" class="p-3 mb-3 border rounded bg-light test-text-display">
+            <div id="testText" class="p-3 mb-3 border rounded bg-light test-text-display fs-4">
             </div>
 
             <!-- Typing Feedback -->
